# fastapi-scaffold

./: README.md  pyproject.toml  requirements.txt
src/: example.py  main.py
src/fastapi_scaffold/: __init__.py  exc.py  exception_handlers.py  http_responses.py  pagination.py  responses.py  sorting.py
